implement localization for realty module

--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -1,15 +1,19 @@
 {
   "validation": {
-    "required": "є обов’язковим",
+    "required": "є обов’язковим(ою)",
     "pattern": "",
     "match": "повинні співпадати",
-    "invalid": "є некоректним",
+    "invalid": "є некоректним(ою)",
     "emailAddress": " Будь-ласка введіть коретну email адресу",
-    "minLength": "повинен містити contain 6 символів"
+    "minLength": "повинен(а) містити  6 символів",
+    "maxLength": "повинен(а) містити менше ніж 30 символів",
+    "min": "повинен(а) бути більша ніж",
+    "max": "повинен(а) бути менше ніж "
   },
   "buttons": {
     "save": "Зберегти",
-    "cancel": "Відмінити"
+    "cancel": "Відмінити",
+    "reset": "Скинути"
   },
   "auth": {
     "fields": {
@@ -65,6 +69,51 @@
     "profileEdit": {
       "birthDate": "Дата народження",
       "title": "Редагувати профіль"
+    }
+  },
+  "realty": {
+    "title": "Нерухомість",
+    "fields": {
+      "title": "Заголовок",
+      "area": "Площа",
+      "price": "Ціна",
+      "currency": "Валюта",
+      "ownerName": "Власник",
+      "ownerPhone": "Номер телефону власника",
+      "flooring": "Кількість поверхів",
+      "floor": "Поверх",
+      "offer": {
+        "title":"Виберіть тип оферу",
+        "sale": "Продаж",
+        "rent": "Оренда"
+      },
+      "resourcetype": {
+        "title":"Виберіть тип нерухомості",
+        "building": "Будинок",
+        "apartment": "Квартира"
+      },
+      "rooms": "Виберіть кількість кімнат",
+      "kitchenArea": "Площа кухні",
+      "fieldArea": "Площа нерухомості",
+      "description": "Опис",
+      "browseBtn": "Перетягніть файли або натисніть"
+    },
+    "add": {
+      "title": "Додати нерухомість"
+    },
+    "edit": {
+      "title": "Редагувати нерухомість"
+    },
+    "filter": {
+      "title": "Фільтер",
+      "sorting": {
+        "placeholder": "Виберіть порядок сортування",
+        "label": "Сортування",
+        "none": "Немає",
+        "title": "Заголовок",
+        "price": "Ціна"
+      },
+      "rooms": "Кількість кімнат"
     }
   }
 }
