implement localization for static module

--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -115,5 +115,11 @@
       },
       "rooms": "Кількість кімнат"
     }
+  },
+  "static": {
+    "notFound": {
+      "title": "Вибачте але ми не можемо знайти сторінку яку ви шукаєте",
+      "backLink": "Повернутись до списку нерухомості"
+    }
   }
 }
