add select language dropdown

--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -45,6 +45,11 @@
   },
   "layout": {
     "toolbar": {
+      "languages": {
+        "uk": "Англійська",
+        "ua": "Українська",
+        "fr": "Французька"
+      },
       "menu": {
         "profile": "Мій Профіль",
         "realty": "Нерухомість",
@@ -88,10 +93,12 @@
         "rent": "Оренда"
       },
       "resourcetype": {
+        "label": "Тип нерухомості",
         "title":"Виберіть тип нерухомості",
         "building": "Будинок",
         "apartment": "Квартира"
       },
+      "room": "Кімнати",
       "rooms": "Виберіть кількість кімнат",
       "kitchenArea": "Площа кухні",
       "fieldArea": "Площа нерухомості",
@@ -104,8 +111,13 @@
     "edit": {
       "title": "Редагувати нерухомість"
     },
+    "details": {
+      "title": "Деталі нерухомості",
+      "original": "Оригінальна нерухомість",
+      "share": "Поділитись"
+    },
     "filter": {
-      "title": "Фільтер",
+      "title": "Фільтр",
       "sorting": {
         "placeholder": "Виберіть порядок сортування",
         "label": "Сортування",
