add image cropper to profile

--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -13,7 +13,8 @@
   "buttons": {
     "save": "Зберегти",
     "cancel": "Відмінити",
-    "reset": "Скинути"
+    "reset": "Скинути",
+    "changeImage": "Змінити фото"
   },
   "auth": {
     "fields": {
