--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -14,7 +14,8 @@
     "save": "Save",
     "cancel": "Cancel",
     "reset": "Reset",
-    "edit": "Edit"
+    "edit": "Edit",
+    "changeImage": "Change Image"
   },
   "auth": {
     "fields": {
