fix scrollbars and users view

--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -22,7 +22,13 @@
       "userName": "Ім’я користувача",
       "phone": "Номер телефону",
       "confirmPassword": "Пароль (Підтвердити)",
-      "passwords": "Паролі"
+      "passwords": "Паролі",
+      "firstName": "Ім’я",
+      "lastName": "Прізвище",
+      "gender": {
+        "male": "Чоловіча",
+        "female": "Жіноча"
+      }
     },
     "signIn": {
       "title": "Увійдіть до свого акаунту",
@@ -55,7 +61,8 @@
         "profile": "Мій Профіль",
         "realty": "Нерухомість",
         "favoriteRealty": "Улюблена Нерухомість",
-        "logout": "Вийти"
+        "logout": "Вийти",
+        "users": "Користувачі"
       }
     }
   },
