fix auth interceptor refresh token and localization

--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -136,6 +136,15 @@
       "rooms": "Кількість кімнат"
     }
   },
+  "users": {
+    "searchPlaceholder": "Пошук",
+    "fields": {
+      "name": "Ім’я",
+      "email": "Email",
+      "phone": "Номер телефону"
+    },
+    "title": "Користувачі"
+  },
   "static": {
     "notFound": {
       "title": "Вибачте але ми не можемо знайти сторінку яку ви шукаєте",
