add default image for realty and profile avatar

--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -14,7 +14,8 @@
     "save": "Зберегти",
     "cancel": "Відмінити",
     "reset": "Скинути",
-    "changeImage": "Змінити фото"
+    "changeImage": "Змінити фото",
+    "edit": "Редагувати"
   },
   "auth": {
     "fields": {
