small realty view fixes

--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -7,6 +7,7 @@
     "emailAddress": " Будь-ласка введіть коретну email адресу",
     "minLength": "повинен(а) містити  6 символів",
     "maxLength": "повинен(а) містити менше ніж 30 символів",
+    "maxLengthFifty": "повинен(а) містити менше ніж 50 символів",
     "min": "повинен(а) бути більша ніж",
     "max": "повинен(а) бути менше ніж "
   },
