small view fixes

--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -79,7 +79,7 @@
     },
     "about": {
       "generalInfo": "Загальна інформація",
-      "edit": "Рудагувати",
+      "edit": "Редагувати",
       "about": "Інформація",
       "realty": "Нерухомість"
     },
@@ -113,7 +113,7 @@
       "room": "Кімнати",
       "rooms": "Виберіть кількість кімнат",
       "kitchenArea": "Площа кухні",
-      "fieldArea": "Площа нерухомості",
+      "fieldArea": "Площа ділянки",
       "description": "Опис",
       "browseBtn": "Перетягніть файли або натисніть"
     },
